Updated controller and response interface for tsoa
