# src/interfaces/responses/get_notes_response/get_notes_response.ts
@@ -1,0 +1,6 @@
+import { INoteData } from "../../note/note";
+import { Res } from "../response";
+
+export interface GetNotesRes extends Res {
+  data?: INoteData[];
+}
