# src/interfaces/responses/sign_up_response/sign_up_response.ts
@@ -1,0 +1,6 @@
+import { IUserData } from "../../user/user";
+import { Res } from "../response";
+
+export interface SignUpRes extends Res {
+  data?: IUserData;
+}
